syntax = "proto3";

package yandex.cloud.events.audittrails;

import "google/rpc/status.proto";
import "google/protobuf/field_mask.proto";
import "yandex/cloud/access/access.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/events/options.proto";
import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/audittrails;audittrails";
option java_package = "yandex.cloud.api.events.audittrails";
option java_outer_classname = "AuditTrailsEvents";

message CreateTrail {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];
    RequestParameters request_parameters = 8;
    Response response = 9;

    message EventDetails {
        string trail_id = 1 [(required) = true];
        string trail_name = 2 [(required) = true];
        Destination destination = 4;
        string service_account_id = 5;
        TrailStatus status = 6;
        PathFilter path_filter = 7;
    }

    message RequestParameters {
        string folder_id = 1;
        string name = 2;
        map<string, string> labels = 3;
        Destination destination = 4;
        string service_account_id = 5;
        PathFilter path_filter = 6;
    }

    message Response {
        string operation_id = 1;
    }
}

message UpdateTrail {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];
    RequestParameters request_parameters = 8;
    Response response = 9;

    message EventDetails {
        string trail_id = 1 [(required) = true];
        string trail_name = 2 [(required) = true];
        Destination destination = 4;
        string service_account_id = 5;
        TrailStatus status = 6;
        PathFilter path_filter = 7;
    }

    message RequestParameters {
        string trail_id = 1;
        google.protobuf.FieldMask update_mask = 2;
        string name = 3;
        map<string, string> labels = 4;
        Destination destination = 5;
        string service_account_id = 6;
        PathFilter path_filter = 7;
    }

    message Response {
        string operation_id = 1;
    }
}

message DeleteTrail {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];
    RequestParameters request_parameters = 8;
    Response response = 9;

    message EventDetails {
        string trail_id = 1 [(required) = true];
        string trail_name = 2 [(required) = true];
        Destination destination = 4;
        string service_account_id = 5;
        TrailStatus status = 6;
        PathFilter path_filter = 7;
    }

    message RequestParameters {
        string trail_id = 1;
    }

    message Response {
        string operation_id = 1;
    }
}

message SetTrailAccessBindings {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];
    RequestParameters request_parameters = 8;
    Response response = 9;

    message EventDetails {
        string trail_id = 1 [(required) = true];
        string trail_name = 2 [(required) = true];
        repeated access.AccessBinding access_bindings = 4;
        repeated access.AccessBindingDelta access_binding_deltas = 5;
    }

    message RequestParameters {
        string trail_id = 1 [(required) = true];
        repeated access.AccessBinding access_bindings = 2;
    }

    message Response {
        string operation_id = 1;
    }
}

message UpdateTrailAccessBindings {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];
    RequestParameters request_parameters = 8;
    Response response = 9;

    message EventDetails {
        string trail_id = 1 [(required) = true];
        string trail_name = 2 [(required) = true];
        repeated access.AccessBinding access_bindings = 4;
        repeated access.AccessBindingDelta access_binding_deltas = 5;
    }

    message RequestParameters {
        string trail_id = 1 [(required) = true];
        repeated access.AccessBindingDelta access_binding_deltas = 2;
    }

    message Response {
        string operation_id = 1;
    }
}


message Destination {
    oneof destination {
        ObjectStorage object_storage = 1;
        CloudLogging cloud_logging = 3;
        DataStream data_stream = 4;
    }
}

message ObjectStorage {
    string bucket_id = 1;
    string object_prefix = 2;
}

message CloudLogging {
    oneof destination {
        string log_group_id = 1;
        string folder_id = 2;
    }
}

message DataStream {
    string database_id = 1;
    string stream_name = 2;
}

message PathFilter {
    PathFilterElement root = 1 [(required) = true];
}

message PathFilterElement {
    oneof element {
        option (exactly_one) = true;
        PathFilterElementAny any_filter = 1;
        PathFilterElementSome some_filter = 2;
    }
}

message PathFilterElementAny {
    Resource resource = 1 [(required) = true];
}

message PathFilterElementSome {
    Resource resource = 1 [(required) = true];
    repeated PathFilterElement filters = 2 [(size)=">0"];
}

message Resource {
    string id = 1 [(required) = true, (length) = "<=64"];
    string type = 2 [(required) = true, (length) = "<=50"];
}

enum TrailStatus {
    TRAIL_STATUS_UNSPECIFIED = 0;
    ACTIVE = 1;
    ERROR = 2;
    DELETED = 3;
}
